--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,33 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer components {
+    .nav-link {
+      @apply relative font-semibold text-white cursor-pointer text-[1rem] w-fit md:block after:block after:content-[''] after:absolute after:h-[0.2rem] after:bg-green-300 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center hidden;
+    }
+    .nav-link-mobile {
+        @apply mb-[2rem] relative font-semibold text-white cursor-pointer text-[2rem] w-fit md:block after:block after:content-[''] after:absolute after:h-[0.2rem] after:bg-green-300 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center;
+    }
+    .heading {
+      @apply text-center text-white text-[1.6rem] sm:text-[2rem] md:text-[2.5rem] font-bold uppercase;
+    }
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
