--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,4 +14,12 @@
     .heading {
       @apply text-center text-white text-[1.6rem] sm:text-[2rem] md:text-[2.5rem] font-bold uppercase;
     }
+    .flip {
+      transition: transform 1.4s;
+      transform-style: preserve-3d;
+    }
+  
+    .flip:hover {
+      transform: rotateY(180deg);
+    }
   }
